# hbaseguiv2

./: .metadata  README.md  deploy_macos.sh  pubspec.yaml
lib/: main.dart
lib/controllers/: hbase_controller.dart
lib/pages/connection/: connection_binding.dart  connection_controller.dart  connection_view.dart
lib/pages/home/: home_controller.dart  home_view.dart
lib/pages/home/widgets/: connection_dialog.dart  table_list.dart  table_view.dart
lib/routes/: app_pages.dart  app_routes.dart  routes.dart
lib/services/: hbase_service.dart
lib/theme/: app_theme.dart
macos/Frameworks/: libhbase_bridge.dylib
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
macos/Runner/Frameworks/: libhbase_bridge.dylib
macos/Runner/HBaseBridge/: CMakeLists.txt  build.gradle  deploy.sh  settings.gradle
macos/Runner/HBaseBridge/cpp-bridge/: CMakeLists.txt  build.gradle  build.sh
macos/Runner/HBaseBridge/cpp-bridge/src/main/cpp/: hbase_bridge.cpp  hbase_bridge.h
macos/Runner/HBaseBridge/java-bridge/: build.gradle  copy.sh  pom.xml  settings.gradle
macos/Runner/HBaseBridge/java-bridge/src/main/java/com/hbasegui/bridge/: HBaseBridge.java
macos/Runner/HBaseBridge/src/main/cpp/: hbase_bridge.cpp
macos/Runner/HBaseBridge/src/main/java/com/hbasegui/bridge/: HBaseBridge.java
test/: widget_test.dart
